[package]
name = "distributed_consensus"
version = "0.1.0"
authors = ["Tamas Florin <tamasflorin@live.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.11.0"
serde = {version="1.0.105", features=["derive"]}
clap = "2.33.0"
serde_json = "1.0.48"

[build-dependencies]
protoc-rust = "2.11.0"